@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<project api_version="0.6">
+  <id>185</id>
+  <name>1000Genomes-A1-YRI</name>
+  <approved>true</approved>
+  <state>inactive</state>
+  <descriptors>
+    <descriptor>
+      <name>Project cost code</name>
+      <value>S0706</value>
+    </descriptor>
+    <descriptor>
+      <name>Funding comments</name>
+      <value>We are just rearranging the current G1K projects into smaller subdivisions. Matt W is going to move the existing samples into this project.</value>
+    </descriptor>
+    <descriptor>
+      <name>Collaborators</name>
+      <value></value>
+    </descriptor>
+    <descriptor>
+      <name>External funding source</name>
+      <value></value>
+    </descriptor>
+    <descriptor>
+      <name>Sequencing budget cost centre</name>
+      <value></value>
+    </descriptor>
+    <descriptor>
+      <name>Project funding model</name>
+      <value></value>
+    </descriptor>
+    <descriptor>
+      <name>Genotyping committee Tracking ID</name>
+      <value></value>
+    </descriptor>
+  </descriptors>
+</project>
